# sf-scrapbook-helper-cpp

./: .gitignore  run.sh
api/: Cargo.toml
api/src/: command.rs  lib.rs
api/src/gamestate/: fortress.rs  guild.rs  items.rs  underworld.rs
src/: CMakeLists.txt  main.cpp  sf_session.cpp  sf_session.h
src/api/: sf_enums.h  sf_session.cpp  sf_session.h
